<resources>
    <string name="app_name">TatimiDroid</string>
    <string name="login">Login</string>
    <string name="mail">MailAddress</string>
    <string name="pass">Password</string>
    <string name="error">There was a problem.</string>
    <string name="liveid">LiveID</string>
    <string name="connection">Connection</string>
    <string name="successful">Successful</string>
    <string name="mail_pass_error">Please set your email address and password.</string>
    <string name="loading">Loading</string>
    <string name="connected">Connected</string>
    <string name="error_getplayserstatus">The seat number and current room could not be obtained because getPlayerStatus could not be obtained.</string>
    <string name="gift_history">Gift History</string>
    <string name="gift_ranking">Gift Ranking</string>
    <string name="nico_ad_ranking">Contribution ranking</string>
    <string name="nico_ad_history">Ad history</string>
    <string name="arena">Arena</string>
    <string name="comment_post">Post a comment</string>
    <string name="post">Post</string>
    <string name="setting">Settings</string>
    <string name="setting_watch_view_description">Play live broadcast</string>
    <string name="setting_watch_view_title">Watch live broadcast</string>
    <string name="play_live_broadcast">Play live broadcast</string>
    <string name="open_browser">Open in browser</string>
    <string name="watching_mode_title">Use viewing mode</string>
    <string name="watching_mode_description">If enabled, comments can be posted.\nHowever, you will not be able to play the same broadcast on other devices.</string>
    <string name="regix_error">The ID could not be found.</string>
    <string name="liveid_fragment">Live broadcast / video ID input</string>
    <string name="follow_program">Followed programs</string>
    <string name="timeshift_wait">Please wait until the start time.</string>
    <string name="comment_post_success">You have successfully posted a comment.</string>
    <string name="comment_post_error">Failed to post a comment.</string>
    <string name="iyayo_comment">Post with 184 (anonymous).</string>
    <string name="nicocas_alert">Posted comments will flow to the arena regardless of the room.</string>
    <string name="tts">Use comment-to-speech.</string>
    <string name="comment_toast">Display comments in Toast</string>
    <string name="tts_init">TTS ready</string>
    <string name="watchmode_select">mode selection</string>
    <string name="comment_viewer_mode">CommentViewer Mode</string>
    <string name="commentviewer_merit">You can get comments, gifts, and nicoini ads for all rooms.</string>
    <string name="commentviewer_mode_demerit">I cannot post comments.</string>
    <string name="comment_post_mode">Comment posting mode</string>
    <string name="comment_post_mode_merit">It is not disconnected even if you watch it simultaneously on a computer.\nComments can be posted. You can get comments, gifts, and nicoini ads for all rooms.</string>
    <string name="comment_post_demerit">If you launch this app on another device and select this mode, you will be disconnected. (You can choose another mode.)</string>
    <string name="nicocas_comment_post_mode">Nicocas expression comment posting mode</string>
    <string name="nicocas_comment_post_mode_merit">Even if you view on the computer at the same time, it will not be disconnected. \nComments can be posted. \nYou can get comments, gifts, and nicoini ads for all rooms.</string>
    <string name="nicocas_comment_post_demerit">The posted comments will be comments on the arena room regardless of the room.</string>
    <string name="watch_count">watchCount</string>
    <string name="comment_count">CommentCount</string>
    <string name="mail_pass_notsave">Email address and password are not saved.</string>
    <string name="comment">Comment</string>
    <string name="room_comment">View by room</string>
    <string name="gift">Gift</string>
    <string name="nicoads">niconi ads</string>
    <string name="program_info">Program Info</string>
    <string name="broadcaster">Broadcaster</string>
    <string name="community_name">Community</string>
    <string name="community_level">Community Level</string>
    <string name="nicorepo">Nicorepo</string>
    <string name="link">Link</string>
    <string name="kono_app">About this app</string>
    <string name="licence">Licence</string>
    <string name="kono_app_contact_description">If you have anything, please go here. The browser will start.</string>
    <string name="version">Version</string>
    <string name="sonta">Other</string>
    <string name="auto_admission">Reservation frame automatic entrance function</string>
    <string name="auto_admission_notification">Reservation frame automatic entrance function</string>
    <string name="auto_admission_stop">Exit the automatic reservation slot admission function</string>
    <string name="auto_admission_notification_message">Reservation slot automatic admission service is running.</string>
    <string name="open_nicolive_app">Open with NicoNico Live Broadcast App</string>
    <string name="open_tatimi_droid">Open with TatimiDroid (Cannot start due to changes in Android 10 and later specifications)</string>
    <string name="auto_admission_description">When the reservation frame start time is reached, it can be started automatically with this app or the NicoNico Live Broadcast app.</string>
    <string name="added">Added</string>
    <string name="nicolive_app">Nico Nico Live Broadcasting</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Do you want to delete it?</string>
    <string name="sourcecode">source code</string>
    <string name="set_clipbord_programid">Since the ID was found in the copied content, it was automatically pasted.</string>
    <string name="open_comment_viewer">Open Comment Viewer</string>
    <string name="auto_admission_one_minute_notification">Reservation frame automatic admission start notification</string>
    <string name="auto_admission_one_minute_notification_description">About 1 minute later, you will automatically enter the reserved space.</string>
    <string name="setting_oidashi_comment_title">Hide eviction comments</string>
    <string name="setting_oidashi_comment_description">Hide eviction comment (hb ifseetno)</string>
    <string name="auto_admission_empty">The program is not registered.</string>
    <string name="add_kotehan">I registered for KOTEHAN.</string>
    <string name="kotehan">KOTEHAN</string>
    <string name="add_kotehan_button">Kotehan added</string>
    <string name="add_ng_comment_message">Added to NG comments.</string>
    <string name="add_ng_user_message">Added to NG users.</string>
    <string name="long_click">Long press to register</string>
    <string name="ng_user">NG user</string>
    <string name="ng_comment">NG comment</string>
    <string name="delete_successful">It has been deleted</string>
    <string name="ng_list">NG list</string>
    <string name="auto_admission_one_minute_notification_description_androidq">Since the auto-start function is not available in your version, please start the app.</string>
    <string name="lunch_app">Launch app</string>
    <string name="notification_background_play">Program background playback</string>
    <string name="popup_player">Pop-up playback</string>
    <string name="background_play">Background playback</string>
    <string name="background_play_finish">Finish</string>
    <string name="background_play_pause">pause</string>
    <string name="background_play_play">Regeneration</string>
    <string name="popup_notification_title">Program Pop-up Playback</string>
    <string name="popup_notification_description">The program is playing in a pop-up.</string>
    <string name="finish">finish</string>
    <string name="lunch_app_close_popup">Pop-up playback has ended because the app has started.</string>
    <string name="lunch_app_close_background">Background playback has ended because the app has started.</string>
    <string name="leave_app">When away from the app</string>
    <string name="leave_background_description">Play background when you leave the app.</string>
    <string name="leave_popup_description">Pop-up playback when leaving the app.</string>
    <string name="one_person">One person</string>
    <string name="person">person</string>
    <string name="add_comment_ng">Add comment NG</string>
    <string name="add_user_ng">Add user NG</string>
    <string name="comment_copy">Copy comment</string>
    <string name="copy_successful">Copied comment.</string>
    <string name="open_url">Open URL</string>
    <string name="one_minute">1 minute</string>
    <string name="active">Number of active people (number of comments per minute)</string>
    <string name="livetime">elapsed time</string>
    <string name="comment_hidden">Hide comments</string>
    <string name="room_color_title">Color the room</string>
    <string name="room_color_description">Follow the NCV and color the arena and standing characters. (Supports up to 10). \nIn the ID non-display mode, color the comment.</string>
    <string name="add">Add</string>
    <string name="comment_post_list">Comment posting list</string>
    <string name="enquate">questionnaire</string>
    <string name="enquate_result">Questionnaire results</string>
    <string name="share">Share</string>
    <string name="program_search">Program search</string>
    <string name="osusume">Recommended programs for you</string>
    <string name="ranking">Ranking</string>
    <string name="setting_new_comment_area_title">Use the new comment posting screen.</string>
    <string name="setting_new_comment_area_description">New comment posts are always displayed at the bottom so you can post comments.</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="yomi">Pop-up playback automatically when watching live broadcasts</string>
    <string name="comment_collection_change_successful">it changed.</string>
    <string name="comment_collection_add_successful">Added.</string>
    <string name="comment_collection_yomi_message">If you add the same reading, it will be overwritten.</string>
    <string name="comment_collection">Comment Collection</string>
    <string name="program_disconnect">This program has ended.</string>
    <string name="end">End</string>
    <string name="back_dialog">Do you want to exit?</string>
    <string name="back_dialog_description">Otsutsu</string>
    <string name="setting_comment_collection_assist">Comment collection replenishment function</string>
    <string name="setting_comment_collection_assist_description">This function is displayed when there is a reading while inputting a comment.</string>
    <string name="liveid_or_communityid">Program ID, community ID, or video ID</string>
    <string name="menu">Menu</string>
    <string name="nimado">2-window comment view</string>
    <string name="video_id">"Video ID (sm9, sm157, etc.)   "</string>
    <string name="video_comment_get">Nico douga comment acquisition</string>
    <string name="history">History</string>
    <string name="post_video">Posted videos</string>
    <string name="mylist">Mylist</string>
    <string name="nicovideo_info">Video information</string>
    <string name="parent_contents">Parent work</string>
    <string name="series">series</string>
    <string name="nico_history">History</string>
    <string name="nicolive_top">Nico Live Top</string>
    <string name="upcoming_programs">Upcoming programs</string>
    <string name="popular_reservation_program">Popular reservation programs</string>
    <string name="dropdown_title">Click here for recommendations, rankings, official programs, etc.</string>
    <string name="cache">Cache</string>
    <string name="nicovideo">Video</string>
    <string name="nicolive">Live</string>
    <string name="nico_jk">Nico Nico Live Commentary</string>
</resources>