<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:title="@string/play_live_broadcast"
            android:icon="@drawable/ic_icon_large"
            android:tooltipText="@string/play_live_broadcast"
            app:showAsAction="ifRoom"
            android:id="@+id/comment_activity_menu_watch_live"/>

    <item
            android:title="@string/popup_player"
            android:icon="@drawable/ic_popup_icon"
            app:showAsAction="ifRoom"
            android:id="@+id/comment_activity_menu_overlay"/>
    <item
            android:title="@string/background_play"
            android:icon="@drawable/ic_background_icon"
            app:showAsAction="ifRoom"
            android:id="@+id/comment_activity_menu_background"/>

    <item
            android:title="@string/open_browser"
            android:icon="@drawable/ic_outline_live_tv_24px"
            android:id="@+id/comment_activity_menu_open_browser"/>
    <item
            android:title="@string/ng_list"
            android:icon="@drawable/ic_outline_live_tv_24px"
            android:id="@+id/comment_activity_menu_ng_list"/>

    <item
            android:title="@string/iyayo_comment"
            android:checkable="true"
            android:checked="true"
            android:id="@+id/comment_activity_menu_iyayo"/>

    <item
            android:title="@string/tts"
            android:checkable="true"
            android:checked="false"
            android:id="@+id/comment_activity_menu_tts"/>

    <item
            android:title="@string/comment_toast"
            android:checkable="true"
            android:checked="false"
            android:id="@+id/comment_activity_menu_toast"/>

</menu>