<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/comment_view_menu_comment_view"
            android:icon="@drawable/ic_outline_comment_24px"
            android:title="@string/comment"/>
    <item
            android:id="@+id/comment_view_menu_room"
            android:icon="@drawable/ic_outline_meeting_room_24px"
            android:title="@string/room_comment"/>
    <item
            android:id="@+id/comment_view_menu_gift"
            android:icon="@drawable/ic_outline_card_giftcard_24px"
            android:title="@string/gift"/>
    <item
            android:id="@+id/comment_view_menu_nicoad"
            android:icon="@drawable/ic_outline_photo_filter_24px"
            android:title="@string/nicoads"/>
    <item
            android:id="@+id/comment_view_menu_info"
            android:icon="@drawable/ic_outline_info_24px"
            android:title="@string/program_info"/>

</menu>