<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/program_tablayout"
            app:tabMode="scrollable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_program" />

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nicorepo" />

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osusume" />

        <com.google.android.material.tabs.TabItem
                android:id="@+id/TabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking" />

        <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_admission" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/community_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>