<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/main_activity_liveid_inputedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/liveid_or_communityid"
                    android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:id="@+id/main_activity_liveid_history_button"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_height="match_parent"
                android:padding="10sp"
                android:tooltipText="@string/nico_history"
                app:srcCompat="@drawable/ic_history_24px" />

    </LinearLayout>

    <Button
            android:id="@+id/main_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/connection" />

    <Button
            android:id="@+id/main_activity_nimado_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="80sp"
            android:layout_height="wrap_content"
            android:text="@string/nimado" />
</LinearLayout>