<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_nicovideo_select_video_id_textinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/video_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/fragment_nicovideo_select_video_id_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2sp"
                android:text="@string/video_comment_get" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/fragment_nicovideo_select_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_video" />


            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mylist" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/fragment_nicovideo_select_mylist_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:tabMode="scrollable">


        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/fragment_nicovideo_select_series_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/fragment_nicovideo_select_swipe_to_reflesh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_nicovideo_select_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</LinearLayout>